--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,15 +17,15 @@ gridmetetl = "gridmet_etl.cli:main"
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
-gdptools = "^0.2.7"
+gdptools = "^0.2.10"
 geopandas = "^0.14.1"
 netcdf4 = "^1.6.5"
 numpy = "^1.26.2"
 pandas = "^2.1.3"
 pint-xarray = "^0.3"
 shapely = "^2.0.2"
-urllib3 = "^2.1.0"
-xarray = "^2023.11.0"
+urllib3 = ">=1.26.18"
+xarray = "^2024.1.1"
 xmltodict = "^0.13.0"
 cyclopts = "^2.5.0"
 
